--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "mysql": "^2.18.1"
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "multer": "^2.0.0",
+    "mysql": "^2.18.1",
+    "nodemailer": "^7.0.3"
   }
 }
