--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3"
+  },
+  "devDependencies": {
+    "prisma": "^6.8.2"
   }
 }
